fix(medias): banner not showing (closes #209)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,7 +73,3 @@
     height: inherit !important;
   }
 }
-
-.remove-maxWidth {
-  max-width: 100% !important;
-}
